large screen, fixed margins. still need to fine tune the line under nav options so that do not extend horizontally past the first and last options.  footer links left border line need same adjustment, still a few px off alignment with words - line needs to moved up. also fixed color of border for features for all sizes. changing the color of menu icon for small size still to be remedied.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -162,9 +162,9 @@
 
   #content .row .features li {
     color: black;
-    padding: 7px;
+    padding: 12px;
     border-top: none;
-    border: 1px solid gray;
+    border: 1px solid #00B8B6;
     font-size: 11px;
   }
 
@@ -333,7 +333,7 @@
   }
 
   #content .row  #scenery {
-    height: 200px;
+    height: 260px;
     background-image: url('/images/scenery.png');
   }
 
@@ -347,10 +347,7 @@
     padding-right: 0px;
   }
 
-  ul {
-  list-style-type: none;
-  margin-left: 0px;
-  }
+  
   .row p#paragraph {
     font-size: 22px;
     line-height: 1.3;
@@ -365,14 +362,13 @@
     text-align: center;
     text-transform: uppercase;
     letter-spacing: 2.5px;
-    border-top: 1px solid #149B99;
   }
   
   #content .row .features li {
     color: black;
-    padding: 7px;
+    padding: 14px;
     border-top: none;
-    border: 1px solid gray;
+    border: 1px solid #00B8B6;
     font-size: 11px;
   }
   
@@ -394,16 +390,20 @@
   }
   
   #footer .row .row {
-    margin-top: 35px;
+    margin-top: 45px;
   }
 
   ul {
     list-style: none;
     text-transform: uppercase;
     font-size: 15px;
-  } 
+    list-style-type: none;
+    margin-left: 0px;
+  }
+
   ul li.active a {
     color: #1ACAC8;
+    font-weight: 400;
   }
 
   ul li.active a:hover {
@@ -415,6 +415,10 @@
   color: white;
   text-transform: uppercase;
   font-size: 12px;
+  font-weight: 600;
+  letter-spacing: 2px;
+  margin-left: -50px;
+  margin-top: 10px;
   }
   
   #footer .row .large-12.columns {
@@ -453,6 +457,7 @@
   header > .row {
     height: 143px;
     background-color: transparent;
+    padding-left: 15px;
   }
   
   header > .row nav.top-bar {
@@ -507,7 +512,7 @@
     display: inline;
     margin-top: 50px;
     background-color: transparent;
-  
+    margin-right: -18px;
   }
   
   header > .row nav.top-bar .top-bar-section ul.right li a {
@@ -547,7 +552,7 @@
   
   }
   .row p#paragraph {
-    margin: 10px 10px 30px;
+    margin: 10px 15px 30px;
     font-size: 22px;
     line-height: 1.3;
     font-weight: 600;
@@ -571,7 +576,7 @@
     color: black;
     padding: 7px;
     border-top: none;
-    border: 1px solid gray;
+    border: 1px solid #00B8B6;
     font-size: 11px;
   }
   
@@ -608,11 +613,13 @@
     float: left;
     margin-right: 20px;
     margin-top: 12px;
+    margin-left: -15px;
    }
 
   ul {
     list-style: none;
     line-height: 2.2;
+    
   } 
    ul li.active a {
     color: #1ACAC8;
